--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
             "email": "fabio.schunig@gmail.com"
         }
     ],
+    "license": "GPL-3.0",
     "require": {
         "guzzlehttp/guzzle": "^7.8",
         "symfony/dom-crawler": "^6.3",
@@ -38,5 +39,6 @@
     },
     "scripts-descriptions": {
         "check": "Executa as verificações do código - PHAN, CS e TEST"
-    }
+    },
+    "bin": "buscar-cursos"
 }
