--- a/composer.json
+++ b/composer.json
@@ -40,5 +40,5 @@
     "scripts-descriptions": {
         "check": "Executa as verificações do código - PHAN, CS e TEST"
     },
-    "bin": "buscar-cursos"
+    "bin": "buscar-cursos.php"
 }
